--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.7.9",
     "express": "^4.21.2",
     "pino": "^9.2.0",
-    "qrcode-terminal": "^0.12.0",
-    "wa-sticker-formatter": "^1.6.0",
+    "pm2": "^6.0.8",
     "qrcode": "^1.5.4",
-     "@hapi/boom": "^10.0.1"
+    "qrcode-terminal": "^0.12.0",
+    "wa-sticker-formatter": "^1.6.0"
   },
   "name": "Queen Shakira",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "pm2": "pm2 start index.js --name queen-shakira"
   },
   "author": "BENJAMINI OMARY",
   "license": "ISC",
